--- a/random_variables.ipynb
+++ b/random_variables.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,6 @@
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "# --- Data Visualisation\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import colors\n",
     "import seaborn as sns"
@@ -71,12 +70,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# YOUR TURN"
+    "1 ) 16\n",
+    "2 ) 1/16\n",
+    "3 ) 6 combinaisons"
    ]
   },
   {
@@ -254,31 +253,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_possibilities(n_toss, n_heads):\n",
     "    '''TO DO: return the number of possibilities to get n_heads when flipping the coin n_toss times\n",
     "        Ex: count_possibilities(4, 4)  = 1'''\n",
-    "    pass  # YOUR CODE HERE"
+    "    return math.comb(n_toss, n_heads)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_total_possibilities(n_toss):\n",
     "    '''TO DO: return the total amount of different combinations when flipping the coins n_toss times\n",
     "        Ex: count_total_possibilities(3) = 8'''\n",
-    "    pass  # YOUR CODE HERE"
+    "    result = 0\n",
+    "    for i in range(n_toss):\n",
+    "        result += math.comb(n_toss, i)\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +289,13 @@
     "            so they can't be over `n_toss` or under 0. The values for each of those keys will correspond\n",
     "            to the probability of a game ending with that result.\n",
     "      probability(5) = {0: ..., 1:..., 2:..., 3:..., 4:..., 5:...}'''\n",
-    "    pass  # YOUR CODE HERE"
+    "    dict_prob = {}\n",
+    "    number_heads_max = n_toss\n",
+    "    total_possibilities = count_total_possibilities(n_toss)\n",
+    "    for i in range(number_heads_max+1):\n",
+    "        possibilities = count_possibilities(n_toss, i)\n",
+    "        dict_prob[f'{i}'] = possibilities/total_possibilities\n",
+    "    return dict_prob\n"
    ]
   },
   {
@@ -299,9 +307,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.10.6, pytest-7.1.3, pluggy-1.0.0 -- /Users/antoinelugol/.pyenv/versions/lewagon/bin/python3\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/antoinelugol/code/antoinelugol/data-random-variables/tests\n",
+      "plugins: anyio-3.6.1, asyncio-0.19.0\n",
+      "asyncio: mode=strict\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 5 items\n",
+      "\n",
+      "test_factorial.py::TestFactorial::test_count_possibilities_11 \u001b[32mPASSED\u001b[0m\u001b[32m     [ 20%]\u001b[0m\n",
+      "test_factorial.py::TestFactorial::test_count_possibilities_43 \u001b[32mPASSED\u001b[0m\u001b[32m     [ 40%]\u001b[0m\n",
+      "test_factorial.py::TestFactorial::test_count_total_possibilities_10 \u001b[31mFAILED\u001b[0m\u001b[31m [ 60%]\u001b[0m\n",
+      "test_factorial.py::TestFactorial::test_probability_1 \u001b[31mFAILED\u001b[0m\u001b[31m              [ 80%]\u001b[0m\n",
+      "test_factorial.py::TestFactorial::test_probability_100 \u001b[31mFAILED\u001b[0m\u001b[31m            [100%]\u001b[0m\n",
+      "\n",
+      "=================================== FAILURES ===================================\n",
+      "\u001b[31m\u001b[1m_______________ TestFactorial.test_count_total_possibilities_10 ________________\u001b[0m\n",
+      "\n",
+      "self = <tests.test_factorial.TestFactorial testMethod=test_count_total_possibilities_10>\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_count_total_possibilities_10\u001b[39;49;00m(\u001b[96mself\u001b[39;49;00m):\n",
+      "        expected = \u001b[94m1024\u001b[39;49;00m\n",
+      ">       \u001b[96mself\u001b[39;49;00m.assertEqual(\u001b[96mself\u001b[39;49;00m.result.count_total_possibilities_10, expected)\n",
+      "\u001b[1m\u001b[31mE       AssertionError: 1023 != 1024\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31mtest_factorial.py\u001b[0m:16: AssertionError\n",
+      "\u001b[31m\u001b[1m_______________________ TestFactorial.test_probability_1 _______________________\u001b[0m\n",
+      "\n",
+      "self = <tests.test_factorial.TestFactorial testMethod=test_probability_1>\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_probability_1\u001b[39;49;00m(\u001b[96mself\u001b[39;49;00m):\n",
+      "        expected = {\u001b[94m0\u001b[39;49;00m: \u001b[94m0.5\u001b[39;49;00m, \u001b[94m1\u001b[39;49;00m: \u001b[94m0.5\u001b[39;49;00m}\n",
+      ">       \u001b[96mself\u001b[39;49;00m.assertEqual(\u001b[96mself\u001b[39;49;00m.result.probability_1, expected)\n",
+      "\u001b[1m\u001b[31mE       AssertionError: {'0': 1.0, '1': 1.0} != {0: 0.5, 1: 0.5}\u001b[0m\n",
+      "\u001b[1m\u001b[31mE       - {'0': 1.0, '1': 1.0}\u001b[0m\n",
+      "\u001b[1m\u001b[31mE       + {0: 0.5, 1: 0.5}\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31mtest_factorial.py\u001b[0m:20: AssertionError\n",
+      "\u001b[31m\u001b[1m______________________ TestFactorial.test_probability_100 ______________________\u001b[0m\n",
+      "\n",
+      "self = <tests.test_factorial.TestFactorial testMethod=test_probability_100>\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_probability_100\u001b[39;49;00m(\u001b[96mself\u001b[39;49;00m):\n",
+      "        expected = \u001b[94m0.08\u001b[39;49;00m\n",
+      ">       \u001b[96mself\u001b[39;49;00m.assertAlmostEqual(\u001b[96mself\u001b[39;49;00m.result.probability_100[\u001b[94m50\u001b[39;49;00m], expected, places=\u001b[94m2\u001b[39;49;00m)\n",
+      "\u001b[1m\u001b[31mE       KeyError: 50\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31mtest_factorial.py\u001b[0m:24: KeyError\n",
+      "=========================== short test summary info ============================\n",
+      "FAILED test_factorial.py::TestFactorial::test_count_total_possibilities_10 - ...\n",
+      "FAILED test_factorial.py::TestFactorial::test_probability_1 - AssertionError:...\n",
+      "FAILED test_factorial.py::TestFactorial::test_probability_100 - KeyError: 50\n",
+      "\u001b[31m========================= \u001b[31m\u001b[1m3 failed\u001b[0m, \u001b[32m2 passed\u001b[0m\u001b[31m in 0.17s\u001b[0m\u001b[31m ==========================\u001b[0m\n",
+      "\n",
+      "\n",
+      "💯 You can commit your code:\n",
+      "\n",
+      "\u001b[1;32mgit\u001b[39m add tests/factorial.pickle\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed factorial step'\u001b[39m\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m push origin master\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from nbresult import ChallengeResult\n",
     "\n",
@@ -689,9 +767,34 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
