--- a/random_variables.ipynb
+++ b/random_variables.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,14 +273,14 @@
     "    '''TO DO: return the total amount of different combinations when flipping the coins n_toss times\n",
     "        Ex: count_total_possibilities(3) = 8'''\n",
     "    result = 0\n",
-    "    for i in range(n_toss):\n",
+    "    for i in range(n_toss+1):\n",
     "        result += math.comb(n_toss, i)\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
     "    total_possibilities = count_total_possibilities(n_toss)\n",
     "    for i in range(number_heads_max+1):\n",
     "        possibilities = count_possibilities(n_toss, i)\n",
-    "        dict_prob[f'{i}'] = possibilities/total_possibilities\n",
+    "        dict_prob[i] = possibilities/total_possibilities\n",
     "    return dict_prob\n"
    ]
   },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -325,48 +325,11 @@
       "\n",
       "test_factorial.py::TestFactorial::test_count_possibilities_11 \u001b[32mPASSED\u001b[0m\u001b[32m     [ 20%]\u001b[0m\n",
       "test_factorial.py::TestFactorial::test_count_possibilities_43 \u001b[32mPASSED\u001b[0m\u001b[32m     [ 40%]\u001b[0m\n",
-      "test_factorial.py::TestFactorial::test_count_total_possibilities_10 \u001b[31mFAILED\u001b[0m\u001b[31m [ 60%]\u001b[0m\n",
-      "test_factorial.py::TestFactorial::test_probability_1 \u001b[31mFAILED\u001b[0m\u001b[31m              [ 80%]\u001b[0m\n",
-      "test_factorial.py::TestFactorial::test_probability_100 \u001b[31mFAILED\u001b[0m\u001b[31m            [100%]\u001b[0m\n",
+      "test_factorial.py::TestFactorial::test_count_total_possibilities_10 \u001b[32mPASSED\u001b[0m\u001b[32m [ 60%]\u001b[0m\n",
+      "test_factorial.py::TestFactorial::test_probability_1 \u001b[32mPASSED\u001b[0m\u001b[32m              [ 80%]\u001b[0m\n",
+      "test_factorial.py::TestFactorial::test_probability_100 \u001b[32mPASSED\u001b[0m\u001b[32m            [100%]\u001b[0m\n",
       "\n",
-      "=================================== FAILURES ===================================\n",
-      "\u001b[31m\u001b[1m_______________ TestFactorial.test_count_total_possibilities_10 ________________\u001b[0m\n",
-      "\n",
-      "self = <tests.test_factorial.TestFactorial testMethod=test_count_total_possibilities_10>\n",
-      "\n",
-      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_count_total_possibilities_10\u001b[39;49;00m(\u001b[96mself\u001b[39;49;00m):\n",
-      "        expected = \u001b[94m1024\u001b[39;49;00m\n",
-      ">       \u001b[96mself\u001b[39;49;00m.assertEqual(\u001b[96mself\u001b[39;49;00m.result.count_total_possibilities_10, expected)\n",
-      "\u001b[1m\u001b[31mE       AssertionError: 1023 != 1024\u001b[0m\n",
-      "\n",
-      "\u001b[1m\u001b[31mtest_factorial.py\u001b[0m:16: AssertionError\n",
-      "\u001b[31m\u001b[1m_______________________ TestFactorial.test_probability_1 _______________________\u001b[0m\n",
-      "\n",
-      "self = <tests.test_factorial.TestFactorial testMethod=test_probability_1>\n",
-      "\n",
-      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_probability_1\u001b[39;49;00m(\u001b[96mself\u001b[39;49;00m):\n",
-      "        expected = {\u001b[94m0\u001b[39;49;00m: \u001b[94m0.5\u001b[39;49;00m, \u001b[94m1\u001b[39;49;00m: \u001b[94m0.5\u001b[39;49;00m}\n",
-      ">       \u001b[96mself\u001b[39;49;00m.assertEqual(\u001b[96mself\u001b[39;49;00m.result.probability_1, expected)\n",
-      "\u001b[1m\u001b[31mE       AssertionError: {'0': 1.0, '1': 1.0} != {0: 0.5, 1: 0.5}\u001b[0m\n",
-      "\u001b[1m\u001b[31mE       - {'0': 1.0, '1': 1.0}\u001b[0m\n",
-      "\u001b[1m\u001b[31mE       + {0: 0.5, 1: 0.5}\u001b[0m\n",
-      "\n",
-      "\u001b[1m\u001b[31mtest_factorial.py\u001b[0m:20: AssertionError\n",
-      "\u001b[31m\u001b[1m______________________ TestFactorial.test_probability_100 ______________________\u001b[0m\n",
-      "\n",
-      "self = <tests.test_factorial.TestFactorial testMethod=test_probability_100>\n",
-      "\n",
-      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_probability_100\u001b[39;49;00m(\u001b[96mself\u001b[39;49;00m):\n",
-      "        expected = \u001b[94m0.08\u001b[39;49;00m\n",
-      ">       \u001b[96mself\u001b[39;49;00m.assertAlmostEqual(\u001b[96mself\u001b[39;49;00m.result.probability_100[\u001b[94m50\u001b[39;49;00m], expected, places=\u001b[94m2\u001b[39;49;00m)\n",
-      "\u001b[1m\u001b[31mE       KeyError: 50\u001b[0m\n",
-      "\n",
-      "\u001b[1m\u001b[31mtest_factorial.py\u001b[0m:24: KeyError\n",
-      "=========================== short test summary info ============================\n",
-      "FAILED test_factorial.py::TestFactorial::test_count_total_possibilities_10 - ...\n",
-      "FAILED test_factorial.py::TestFactorial::test_probability_1 - AssertionError:...\n",
-      "FAILED test_factorial.py::TestFactorial::test_probability_100 - KeyError: 50\n",
-      "\u001b[31m========================= \u001b[31m\u001b[1m3 failed\u001b[0m, \u001b[32m2 passed\u001b[0m\u001b[31m in 0.17s\u001b[0m\u001b[31m ==========================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m5 passed\u001b[0m\u001b[32m in 0.04s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
